--- a/src/components/converter/convert.css
+++ b/src/components/converter/convert.css
@@ -22,11 +22,11 @@ h2 {
 }
 .input-cont {
     width: 15%;
-    background-color: rgb(190, 189, 189);
+    background-color: rgb(131, 60, 161);
     height: 5rem;
     border-radius: 8px;
     padding: .5rem;
-    box-shadow: 1px 1px 8px 4px inset rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 8px 4px inset rgba(0,0,0,0.3);
     margin: 2rem;
 }
 
@@ -36,10 +36,13 @@ h2 {
     border-radius: 5px;
     height: 3rem;
     margin-top: .5rem;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .inputs:focus {
-    box-shadow: 2px 2px 8px 4px  rgba(219, 40, 255, 0.5);
+    box-shadow: 2px 2px 8px 4px  rgba(247, 182, 255, 0.7);
+    background-color: rgb(216, 182, 225);
 }
 #icon {
     margin-top: 3rem;
@@ -73,5 +76,7 @@ h2 {
 #title {
     text-align: left;
     margin-left: 29.3rem;
-    /* margin-top: 2rem; */
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: -1rem;
 }
